--- a/public/NiceAdmin/css/style.css
+++ b/public/NiceAdmin/css/style.css
@@ -9903,3 +9903,8 @@ span.customSelect.changed {
 #sendmessage.show, #errormessage.show, .show {
 	display:block;
 }
+
+.role_td_color{
+   background-color: #688a7e!important;
+   color: #f0f2f7!important;
+}
